--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
 fastapi
-
 sklearn
-
 pandas
-
 sqlalchemy
-
 uvicorn
-
 pydantic
-
+psycopg2
+mysql-connector-python
 urllib3
-
 uvloop
-
 httptools
-
-psycopg2-binary
-
