--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,18 +15,18 @@ pipeline {
             }
             stage('Verify The Steps') {
                 steps{
-                    sh 'cat Jenkinsfile'
+                    sh 'cat jenkinsfile'
                 }
             }
             
             stage('Build Docker Image') {
                 steps{
-                    sh "docker build -t fastapi:v1 ."
+                    sh "docker build -t subhashree_v3.0 ."
                 }
             }
             stage('Run Docker Image And Expose API'){
                 steps {
-                sh "docker run -d -p 8008:8008 --name fastapiapp23 fastapi:v1"
+                sh "docker run -d -p 8008:8008 --name subhashree_v3.0"
                 }
             }
             stage("Testing Application"){
